force-app/main/default/objects/mcdm_15__ScheduledSendSubmission__c/mcdm_15__ScheduledSendSubmission__c.object-meta.xml
<CustomObject>
    <description>Represents a Sendable Asset for Scheduled Send. Pairs a SendableRecord and JourneyActivity personalization.</description>
    <label>MCDM Scheduled Send Submission</label>
    <nameField>
        <displayFormat>DMSSS-{000000}</displayFormat>
        <label>MCDM Scheduled Send Submission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MCDM Scheduled Send Submissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>