force-app/main/default/objects/mcdm_15__ScheduledSendSubmission__c/fields/mcdm_15__ScheduledSend__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__ScheduledSend__c</fullName>
    <label>Scheduled Send</label>
    <referenceTo>mcdm_15__ScheduledSend__c</referenceTo>
    <relationshipLabel>MCDM Scheduled Send</relationshipLabel>
    <relationshipName>MCDM_ScheduledSend</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>