force-app/main/default/objects/mcdm_15__ScheduledSendSubmission__c/fields/mcdm_15__Status__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>