force-app/main/default/objects/mcdm_15__ScheduledSendSubmission__c/fields/mcdm_15__SubmissionP13n__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__SubmissionP13n__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submission Personalization</label>
    <referenceTo>mcdm_15__SubmissionP13n__c</referenceTo>
    <relationshipLabel>ScheduledSendSubmissions</relationshipLabel>
    <relationshipName>ScheduledSendSubmissions</relationshipName>
    <type>Lookup</type>
</CustomField>